// Vitest Snapshot v1

exports[`html reporter > resolves to "failing" status for test file "json-fail" > tests are failing 1`] = `
{
  "config": {
    "--": [],
    "allowOnly": false,
    "cache": {
      "dir": "<rootDir>/test/reporters/fixtures/node_modules/.vitest",
    },
    "clearMocks": false,
    "color": true,
    "coverage": {
      "allowExternal": false,
      "clean": true,
      "cleanOnRerun": false,
      "enabled": false,
      "exclude": [
        "coverage/**",
        "dist/**",
        "packages/*/test{,s}/**",
        "**/*.d.ts",
        "cypress/**",
        "test{,s}/**",
        "test{,-*}.{js,cjs,mjs,ts,tsx,jsx}",
        "**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}",
        "**/*{.,-}spec.{js,cjs,mjs,ts,tsx,jsx}",
        "**/__tests__/**",
        "**/{karma,rollup,webpack,vite,vitest,jest,ava,babel,nyc,cypress}.config.*",
        "**/.{eslint,mocha,prettier}rc.{js,cjs,yml}",
      ],
      "excludeNodeModules": true,
      "extension": [
        ".js",
        ".cjs",
        ".mjs",
        ".ts",
        ".mts",
        ".cts",
        ".tsx",
        ".jsx",
        ".vue",
        ".svelte",
      ],
      "provider": "c8",
      "reporter": [
        "text",
        "html",
        "clover",
        "json",
      ],
      "reportsDirectory": "./coverage",
    },
    "css": {
      "include": [],
      "modules": {
        "classNameStrategy": "stable",
      },
    },
    "dangerouslyIgnoreUnhandledErrors": false,
    "defines": {},
    "deps": {
      "inline": [
        {},
        {},
        {},
        {},
        {},
        {},
        "@nuxt/test-utils",
      ],
      "registerNodeLoader": false,
    },
    "environment": "node",
    "exclude": [
      "**/node_modules/**",
      "**/dist/**",
      "**/cypress/**",
      "**/.{idea,git,cache,output,temp}/**",
      "**/{karma,rollup,webpack,vite,vitest,jest,ava,babel,nyc,cypress}.config.*",
    ],
    "fakeTimers": {
      "loopLimit": 10000,
      "shouldClearNativeTimers": true,
      "toFake": [
        "setTimeout",
        "clearTimeout",
        "setInterval",
        "clearInterval",
        "setImmediate",
        "clearImmediate",
        "Date",
      ],
    },
    "forceRerunTriggers": [
      "**/package.json/**",
      "**/{vitest,vite}.config.*/**",
    ],
    "globals": false,
    "hookTimeout": 10000,
    "include": [
      "**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
    ],
    "isolate": true,
    "maxConcurrency": 5,
    "mockReset": false,
    "mode": "test",
    "open": true,
    "outputFile": "html/fail/index.html",
    "reporter": "html",
    "reporters": [
      "html",
    ],
    "restoreMocks": false,
    "root": "<rootDir>/test/reporters/fixtures",
    "run": true,
    "segfaultRetry": 0,
    "sequence": {
      "hooks": "parallel",
    },
    "setupFiles": [],
    "silent": false,
    "slowTestThreshold": 300,
    "snapshotOptions": {
      "snapshotFormat": {},
      "updateSnapshot": "none",
    },
    "teardownTimeout": 1000,
    "testTimeout": 5000,
    "threads": true,
    "typecheck": {
      "checker": "tsc",
      "exclude": [
        "**/node_modules/**",
        "**/dist/**",
        "**/cypress/**",
        "**/.{idea,git,cache,output,temp}/**",
        "**/{karma,rollup,webpack,vite,vitest,jest,ava,babel,nyc,cypress}.config.*",
      ],
      "include": [
        "**/*.{test,spec}-d.{ts,js}",
      ],
    },
    "ui": false,
    "uiBase": "/__vitest__/",
    "update": false,
    "watch": false,
    "watchExclude": [
      "**/node_modules/**",
      "**/dist/**",
    ],
  },
  "files": [
    {
      "collectDuration": 13,
      "filepath": "<rootDir>/test/reporters/fixtures/json-fail.test.ts",
      "id": "997109584",
      "mode": "run",
      "name": "json-fail.test.ts",
      "result": {
        "duration": 73,
        "hooks": {
          "afterAll": "pass",
          "beforeAll": "pass",
        },
        "startTime": 1671252396546,
        "state": "fail",
      },
      "setupDuration": 1,
      "tasks": [
        {
          "file": [Circular],
          "id": "997109584_0",
          "mode": "run",
          "name": "should fail",
          "result": {
            "duration": 73,
            "error": {
              "actual": "2",
              "constructor": "Function<AssertionError>",
              "expected": "1",
              "message": "expected 2 to deeply equal 1",
              "name": "AssertionError",
              "nameStr": "AssertionError",
              "operator": "strictEqual",
              "showDiff": true,
              "stack": "AssertionError: expected 2 to deeply equal 1
    at <rootDir>/test/reporters/fixtures/json-fail.test.ts:6:13
    at <rootDir>/packages/vitest/dist/chunk-runtime-chain.77dc8b67.js:2281:13
    at <rootDir>/packages/vitest/dist/chunk-runtime-chain.77dc8b67.js:2158:26
    at runTest (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:369:24)
    at runSuite (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:467:15)
    at runFiles (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:602:5)
    at startTestsNode (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:620:3)
    at <rootDir>/packages/vitest/dist/entry.js:75:11
    at Module.withEnv (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:157:5)
    at run (<rootDir>/packages/vitest/dist/entry.js:68:7)",
              "stackStr": "AssertionError: expected 2 to deeply equal 1
    at <rootDir>/test/reporters/fixtures/json-fail.test.ts:6:13
    at <rootDir>/packages/vitest/dist/chunk-runtime-chain.77dc8b67.js:2281:13
    at <rootDir>/packages/vitest/dist/chunk-runtime-chain.77dc8b67.js:2158:26
    at runTest (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:369:24)
    at runSuite (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:467:15)
    at runFiles (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:602:5)
    at startTestsNode (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:620:3)
    at <rootDir>/packages/vitest/dist/entry.js:75:11
    at Module.withEnv (<rootDir>/packages/vitest/dist/chunk-runtime-setup.eb9df441.js:157:5)
    at run (<rootDir>/packages/vitest/dist/entry.js:68:7)",
              "toJSON": "Function<>",
              "toString": "Function<toString>",
            },
            "hooks": {
              "afterEach": "pass",
              "beforeEach": "pass",
            },
            "retryCount": 0,
            "startTime": 1671252396546,
            "state": "fail",
          },
          "suite": {
            "file": [Circular],
            "id": "",
            "mode": "run",
            "name": "",
            "tasks": [
              [Circular],
            ],
            "type": "suite",
          },
          "type": "test",
        },
      ],
      "type": "suite",
    },
  ],
  "moduleGraph": {
    "<rootDir>/test/reporters/fixtures/json-fail.test.ts": {
      "externalized": [],
      "graph": {
        "<rootDir>/test/reporters/fixtures/json-fail.test.ts": [],
      },
      "inlined": [
        "<rootDir>/test/reporters/fixtures/json-fail.test.ts",
      ],
    },
  },
  "paths": [],
}
`;

exports[`html reporter > resolves to "passing" status for test file "all-passing-or-skipped" > tests are passing 1`] = `
{
  "config": {
    "--": [],
    "allowOnly": false,
    "cache": {
      "dir": "<rootDir>/test/reporters/fixtures/node_modules/.vitest",
    },
    "clearMocks": false,
    "color": true,
    "coverage": {
      "allowExternal": false,
      "clean": true,
      "cleanOnRerun": false,
      "enabled": false,
      "exclude": [
        "coverage/**",
        "dist/**",
        "packages/*/test{,s}/**",
        "**/*.d.ts",
        "cypress/**",
        "test{,s}/**",
        "test{,-*}.{js,cjs,mjs,ts,tsx,jsx}",
        "**/*{.,-}test.{js,cjs,mjs,ts,tsx,jsx}",
        "**/*{.,-}spec.{js,cjs,mjs,ts,tsx,jsx}",
        "**/__tests__/**",
        "**/{karma,rollup,webpack,vite,vitest,jest,ava,babel,nyc,cypress}.config.*",
        "**/.{eslint,mocha,prettier}rc.{js,cjs,yml}",
      ],
      "excludeNodeModules": true,
      "extension": [
        ".js",
        ".cjs",
        ".mjs",
        ".ts",
        ".mts",
        ".cts",
        ".tsx",
        ".jsx",
        ".vue",
        ".svelte",
      ],
      "provider": "c8",
      "reporter": [
        "text",
        "html",
        "clover",
        "json",
      ],
      "reportsDirectory": "./coverage",
    },
    "css": {
      "include": [],
      "modules": {
        "classNameStrategy": "stable",
      },
    },
    "dangerouslyIgnoreUnhandledErrors": false,
    "defines": {},
    "deps": {
      "inline": [
        {},
        {},
        {},
        {},
        {},
        {},
        "@nuxt/test-utils",
      ],
      "registerNodeLoader": false,
    },
    "environment": "node",
    "exclude": [
      "**/node_modules/**",
      "**/dist/**",
      "**/cypress/**",
      "**/.{idea,git,cache,output,temp}/**",
      "**/{karma,rollup,webpack,vite,vitest,jest,ava,babel,nyc,cypress}.config.*",
    ],
    "fakeTimers": {
      "loopLimit": 10000,
      "shouldClearNativeTimers": true,
      "toFake": [
        "setTimeout",
        "clearTimeout",
        "setInterval",
        "clearInterval",
        "setImmediate",
        "clearImmediate",
        "Date",
      ],
    },
    "forceRerunTriggers": [
      "**/package.json/**",
      "**/{vitest,vite}.config.*/**",
    ],
    "globals": false,
    "hookTimeout": 10000,
    "include": [
      "**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
    ],
    "isolate": true,
    "maxConcurrency": 5,
    "mockReset": false,
    "mode": "test",
    "open": true,
    "outputFile": "html/all-passing-or-skipped/index.html",
    "reporter": "html",
    "reporters": [
      "html",
    ],
    "restoreMocks": false,
    "root": "<rootDir>/test/reporters/fixtures",
    "run": true,
    "segfaultRetry": 0,
    "sequence": {
      "hooks": "parallel",
    },
    "setupFiles": [],
    "silent": false,
    "slowTestThreshold": 300,
    "snapshotOptions": {
      "snapshotFormat": {},
      "updateSnapshot": "none",
    },
    "teardownTimeout": 1000,
    "testTimeout": 5000,
    "threads": true,
    "typecheck": {
      "checker": "tsc",
      "exclude": [
        "**/node_modules/**",
        "**/dist/**",
        "**/cypress/**",
        "**/.{idea,git,cache,output,temp}/**",
        "**/{karma,rollup,webpack,vite,vitest,jest,ava,babel,nyc,cypress}.config.*",
      ],
      "include": [
        "**/*.{test,spec}-d.{ts,js}",
      ],
    },
    "ui": false,
    "uiBase": "/__vitest__/",
    "update": false,
    "watch": false,
    "watchExclude": [
      "**/node_modules/**",
      "**/dist/**",
    ],
  },
  "files": [
    {
      "collectDuration": 14,
      "filepath": "<rootDir>/test/reporters/fixtures/all-passing-or-skipped.test.ts",
      "id": "1111755131",
      "mode": "run",
      "name": "all-passing-or-skipped.test.ts",
      "result": {
        "duration": 1,
        "hooks": {
          "afterAll": "pass",
          "beforeAll": "pass",
        },
        "startTime": 1671252395282,
        "state": "pass",
      },
      "setupDuration": 0,
      "tasks": [
        {
          "file": [Circular],
          "id": "1111755131_0",
          "mode": "run",
          "name": "2 + 3 = 5",
          "result": {
            "duration": 1,
            "hooks": {
              "afterEach": "pass",
              "beforeEach": "pass",
            },
            "retryCount": 0,
            "startTime": 1671252395282,
            "state": "pass",
          },
          "suite": {
            "file": [Circular],
            "id": "",
            "mode": "run",
            "name": "",
            "tasks": [
              [Circular],
              {
                "file": [Circular],
                "id": "1111755131_1",
                "mode": "skip",
                "name": "3 + 3 = 6",
                "suite": [Circular],
                "type": "test",
              },
            ],
            "type": "suite",
          },
          "type": "test",
        },
        {
          "file": [Circular],
          "id": "1111755131_1",
          "mode": "skip",
          "name": "3 + 3 = 6",
          "suite": {
            "file": [Circular],
            "id": "",
            "mode": "run",
            "name": "",
            "tasks": [
              {
                "file": [Circular],
                "id": "1111755131_0",
                "mode": "run",
                "name": "2 + 3 = 5",
                "result": {
                  "duration": 1,
                  "hooks": {
                    "afterEach": "pass",
                    "beforeEach": "pass",
                  },
                  "retryCount": 0,
                  "startTime": 1671252395282,
                  "state": "pass",
                },
                "suite": [Circular],
                "type": "test",
              },
              [Circular],
            ],
            "type": "suite",
          },
          "type": "test",
        },
      ],
      "type": "suite",
    },
  ],
  "moduleGraph": {
    "<rootDir>/test/reporters/fixtures/all-passing-or-skipped.test.ts": {
      "externalized": [],
      "graph": {
        "<rootDir>/test/reporters/fixtures/all-passing-or-skipped.test.ts": [],
      },
      "inlined": [
        "<rootDir>/test/reporters/fixtures/all-passing-or-skipped.test.ts",
      ],
    },
  },
  "paths": [],
}
`;
